[metadata]
name = FoldX_ibex
version = 1.0.0
author = Francisco Guzman
author_email = author@example.com
description = A wrapper for FoldX in ibex
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/strubelab/FoldX_ibex
license_files = LICENSE.txt

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
# package_dir =
#     = example_wrapper
packages = find:
python_requires = >=3.6
scripts =
    bin/foldx_wrapper

# [options.packages.find]
# where = example_wrapper

# [options.entry_points]
# console_scripts =
#     wrapper-function = package.subpackage.module:object.object